mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_module_class_globals.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: Import {
                module_path: "modglobal_d",
                spec: Wildcard,
            },
            span: Span,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: AutoDecl(
                        "s",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "Scaler",
                                            ),
                                            span: Span,
                                        },
                                        field: "of",
                                    },
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Literal(
                                            Integer(
                                                3,
                                            ),
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "scaled (want 333): ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: Call {
                                                                    func: ExpressionNode {
                                                                        kind: FieldAccess {
                                                                            expr: ExpressionNode {
                                                                                kind: Identifier(
                                                                                    "s",
                                                                                ),
                                                                                span: Span,
                                                                            },
                                                                            field: "scaled",
                                                                        },
                                                                        span: Span,
                                                                    },
                                                                    args: [],
                                                                },
                                                                span: Span,
                                                            },
                                                            field: "to_string",
                                                        },
                                                        span: Span,
                                                    },
                                                    args: [],
                                                },
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
