mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_module_renamed_constant.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: Import {
                module_path: "modglobal_c",
                spec: Item {
                    item: "LIMIT",
                    alias: Some(
                        "MAX_LIMIT",
                    ),
                },
            },
            span: Span,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "renamed const (want 55): ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: Identifier(
                                                                    "MAX_LIMIT",
                                                                ),
                                                                span: Span,
                                                            },
                                                            field: "to_string",
                                                        },
                                                        span: Span,
                                                    },
                                                    args: [],
                                                },
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
